--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brf Grimsberg</title>
   <!--<link rel="stylesheet" href="styles.css">-->
+  <style>
+    img.logo {
+          width: 60%;
+          margin: auto;
+          display: block;
+        }
+  </style>
 </head>
 
 <body>
-  <img src="brfgrimsberglogo.svg">
+  <img class="logo" src="brfgrimsberglogo.svg">
 </body>
 
 </html>
