--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
 
 <body>
   <img class="logo" src="brfgrimsberglogo.svg">
-  <div class="btn-group">
-    <a href="Stadgar.pdf" class="btn btn-outline-primary">Stadgar</a>
-    <a href="mailto:brfgrimsberg@gmail.com" class="btn btn-outline-primary">Kontakt</a>
+  <div class="container text-center">
+    <div class="row align-items-start">
+      <div class="col">
+      </div>
+      <div class="col">
+          <div class="btn-group">
+      <a href="Stadgar.pdf" class="btn btn-outline-primary">Stadgar</a>
+      <a href="mailto:brfgrimsberg@gmail.com" class="btn btn-outline-primary">Kontakt</a>
+    </div>
+      </div>
+      <div class="col">
+      </div>
+    </div>
   </div>
+
 </body>
 
 </html>
