--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </div>
       <div class="col">
           <div class="btn-group">
-      <a href="Stadgar.pdf" class="btn btn-outline-primary">Stadgar</a>
-      <a href="mailto:brfgrimsberg@gmail.com" class="btn btn-outline-primary">Kontakt</a>
+      <a href="Stadgar.pdf" class="btn btn-outline-secondary">Stadgar</a>
+      <a href="mailto:brfgrimsberg@gmail.com" class="btn btn-outline-secondary">Kontakt</a>
     </div>
       </div>
       <div class="col">
