--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     img.logo {
           width: 60%;
           margin: auto;
+          margin-top: 30px;
+          margin-bottom: 50px;
           display: block;
         }
   </style>
@@ -18,9 +20,6 @@
 
 <body>
   <img class="logo" src="brfgrimsberglogo.svg">
-  <br>
-  <br>
-  <br>
   <div class="container text-center">
     <div class="row align-items-start">
       <div class="col">
