--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
             <li>Sophantering ingår i avgiften.</li>
             <li>Återvinning som plast, papper, karton, glas, m.m. lämnas på valfri återvinningsstation eller återvinningscentral.</li>
             <li>Kallvatten ingår i avgiften.</li>
-            <li>Du ansvara för att uppdatera namnen på postlådan när du flyttar in.</li>
+            <li>Du ansvarar för att uppdatera namnen på postlådan när du flyttar in.</li>
             <li>El-abbonemang ingår inte i avgiften utan måste teckans av respektive medlem.</li>
             <li>Bredband ingår inte i avgiften, Telia öppen fiber finns i alla bostäderna.</li>
-            <li>Som medlem ansvarar du för vissa delar av underhållet, exakt vad hittar du i dokumentet <a href="Underhållansvar.pdf"> Underhållansvar</a>.</li>
+            <li>Som medlem ansvarar du för vissa delar av underhållet, exakt vad hittar du i dokumentet <a href="Underhållansvar.pdf">Underhållansvar</a>.</li>
             <li>Som medlem i Brf Grimsberg kommer du att vara medlem i styrelsen enligt ett rullande <a href="javascript:toggle('schema');setnow()">schema</a>.</li>
+            <li>Mer information finns i föreningens <a href="Förhållningsregler.pdf">förhållningsregler</a>.</li>
         </ul>
       </div>
     </div>
