--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <button class="btn btn-outline-secondary" type="button" onclick="add('year',1)">+</button>
         </div>
         <div id="who"></div>
+        <p><a href="https://www.allabolag.se/befattningshavare/bostadsr%C3%A4ttsf%C3%B6reningen-grimsberg/-/fastighetsbolag-lokaler/3JA863PI5YDUJ">Nuvarande styrelse</a></p>
       </div>
     </div>
     <div class="row align-items-start sida" id="ny" style="display: none;">
